# Asser

./: CMakeLists.txt  CMakeLists.txt.user.TnlRHq  CMakeLists.txt.user.aWbXcD  README.md  authors.cpp  authors.h  authors.ui  basetestdialog.cpp  basetestdialog.h  donut.cpp  donut.h  donut.ui  main.cpp  mainscreen.cpp  mainscreen.h  mainscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  manuals.cpp  manuals.h  manuals.ui  resources.qrc  resultsdialog.cpp  resultsdialog.h  screenspace.h  starttestdialog.cpp  starttestdialog.h  style.h  test1.cpp  test1.h  test2.cpp  test2.h  tests.cpp  tests.h  tests.ui  testtemplatedialog.cpp  testtemplatedialog.h  testtype.h
images/: Резервная_копия_12345.cdr
test1/: variant1.json
test2/: variant1.json
